condmatter: added Ma_2020.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -396,6 +396,19 @@
   journal = {Physical Review A},
   publisher = {American Physical Society ({APS})}
 }
+@article{Ma_2020,
+  title = {Quantum simulations of materials on near-term quantum computers},
+  author = {He Ma and Marco Govoni and Giulia Galli},
+  year = {2020},
+  month = jul,
+  doi = {10.1038/s41524-020-00353-z},
+  url = {https://www.nature.com/articles/s41524-020-00353-z.pdf},
+  eprint = {2002.11173},
+  volume = {6},
+  number = {1},
+  journal = {npj Computational Materials},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Mooney_2019,
   title = {Entanglement in a 20-Qubit Superconducting Quantum Computer},
   author = {Gary J. Mooney and Charles D. Hill and Lloyd C. L. Hollenberg},
