computing.realization: hybrid ‘super–semi’ quantum systems.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -49,19 +49,6 @@
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
 }
-@article{Harrow_2009,
-   title={Quantum Algorithm for Linear Systems of Equations},
-   author={Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
-   year={2009},
-   month={Oct},
-   ISSN={1079-7114},
-   DOI={10.1103/physrevlett.103.150502},
-   eprint={0811.3171},
-   volume={103},
-   number={15},
-   journal={Physical Review Letters},
-   publisher={American Physical Society (APS)}
-}
 @article{Arute_2020,
    title={Hartree-{F}ock on a superconducting qubit quantum computer},
    author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
@@ -162,6 +149,19 @@
       author={Gilles Brassard and Frederic Dupuis and Sebastien Gambs and Alain Tapp},
       year={2011},
       eprint={1106.4267}
+}
+@article{Burkard_2020,
+  title = {Superconductor-semiconductor hybrid-circuit quantum electrodynamics},
+  author = {Guido Burkard and Michael J. Gullans and Xiao Mi and Jason R. Petta},
+  year = {2020},
+  month = jan,
+  doi = {10.1038/s42254-019-0135-2},
+  eprint = {1905.01155},
+  volume = {2},
+  number = {3},
+  pages = {129--140},
+  journal = {Nature Reviews Physics},
+  publisher = {Springer Science and Business Media {LLC}}
 }
 @article{EPR_1935,
   title = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
@@ -288,6 +288,19 @@
   author={K. Griffin and Suhas S. Jain and T. Flint and W. R. Chan},
   year={2020},
   url={http://web.stanford.edu/~sjsuresh/griffin_2019.pdf}
+}
+@article{Harrow_2009,
+   title={Quantum Algorithm for Linear Systems of Equations},
+   author={Harrow, Aram W. and Hassidim, Avinatan and Lloyd, Seth},
+   year={2009},
+   month={Oct},
+   ISSN={1079-7114},
+   DOI={10.1103/physrevlett.103.150502},
+   eprint={0811.3171},
+   volume={103},
+   number={15},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)}
 }
 @article{Hensen_2015,
   title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
