computing.idea: readiness of quantum annealers.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -461,6 +461,19 @@
    journal={npj Quantum Information},
    publisher={Springer Science and Business Media LLC},
 }
+@article{PerdomoOrtiz_2019,
+   title={Readiness of Quantum Optimization Machines for Industrial Applications},
+   author={Perdomo-Ortiz, Alejandro and Feldman, Alexander and Ozaeta, Asier and Isakov, Sergei V. and Zhu, Zheng and O’Gorman, Bryan and Katzgraber, Helmut G. and Diedrich, Alexander and Neven, Hartmut and de Kleer, Johan and et al.},
+   year={2019},
+   month={Jul},
+   ISSN={2331-7019},
+   DOI={10.1103/physrevapplied.12.014004},
+   eprint={1708.09780},
+   volume={12},
+   number={1},
+   journal={Physical Review Applied},
+   publisher={American Physical Society (APS)}
+}
 @article{Petit_2020,
   title = {Universal quantum logic in hot silicon qubits},
   author = {L. Petit and H. G. J. Eenink and M. Russ and W. I. L. Lawrie and N. W. Hendrickx and S. G. J. Philips and J. S. Clarke and L. M. K. Vandersypen and M. Veldhorst},
