computing.algo: Grover is optimal.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -35,6 +35,20 @@
   journal = {Nature Communications},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Bennett_1997,
+   title={Strengths and Weaknesses of Quantum Computing},
+   author={Bennett, Charles H. and Bernstein, Ethan and Brassard, Gilles and Vazirani, Umesh},
+   year={1997},
+   month={Oct},
+   ISSN={1095-7111},
+   DOI={10.1137/s0097539796300933},
+   eprint={quant-ph/9701001},
+   volume={26},
+   number={5},
+   pages={1510–1523},
+   journal={SIAM Journal on Computing},
+   publisher={Society for Industrial & Applied Mathematics (SIAM)}
+}
 @article{Biamonte_2017,
    title={Quantum machine learning},
    author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
