complements.classical: nonlinear problems.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -423,6 +423,19 @@
   journal = {Physical Review A},
   publisher = {American Physical Society ({APS})}
 }
+@article{Lubasch_2020,
+   title={Variational quantum algorithms for nonlinear problems},
+   author={Lubasch, Michael and Joo, Jaewoo and Moinier, Pierre and Kiffner, Martin and Jaksch, Dieter},
+   year={2020},
+   month={Jan},
+   ISSN={2469-9934},
+   DOI={10.1103/physreva.101.010301},
+   eprint={1907.09032},
+   volume={101},
+   number={1},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)}
+}
 @article{Ma_2020,
   title = {Quantum simulations of materials on near-term quantum computers},
   author = {He Ma and Marco Govoni and Giulia Galli},
