complements.opti: IEEE tutorial incl. videos.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -90,3 +90,12 @@
  url     = {https://www.hpcwire.com/2020/08/19/intel-connects-the-quantum-dots-in-accelerating-quantum-computing-effort/},
  journal = {HPC wire}
 }
+@MISC{Shaydulin_2020,
+    title={{C}ombinatorial {O}ptimization on {Q}uantum {C}omputers ({IEEE} {Q}uantum {W}eek tutorial)},
+    author={Shaydulin, Ruslan},
+    year={2020},
+    month={Oct},
+    URL={https://github.com/rsln-s/IEEE_QW_2020},
+    howpublished={github and youtube},
+    journal={IEEE Quantum Week (QCE20)}
+}
