complements.chemistry: further readings NSF report and IBM lectures.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -488,6 +488,13 @@
    journal={npj Quantum Information},
    publisher={Springer Science and Business Media LLC},
 }
+@misc{Olson_2017,
+  title={Quantum Information and Computation for Chemistry}, 
+  author={Jonathan Olson and Yudong Cao and Jonathan Romero and Peter Johnson and Pierre-Luc Dallaire-Demers and Nicolas Sawaya and Prineha Narang and Ian Kivlichan and Michael Wasielewski and Alán Aspuru-Guzik},
+  year={2017},
+  eprint={1706.05413},
+  publisher={National Science Foundation}
+}
 @article{PerdomoOrtiz_2019,
    title={Readiness of Quantum Optimization Machines for Industrial Applications},
    author={Perdomo-Ortiz, Alejandro and Feldman, Alexander and Ozaeta, Asier and Isakov, Sergei V. and Zhu, Zheng and O’Gorman, Bryan and Katzgraber, Helmut G. and Diedrich, Alexander and Neven, Hartmut and de Kleer, Johan and et al.},
