algo/opti: approach to SAT and TSP using Grover.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -68,6 +68,13 @@
     journal={Industry Day},
     place={Munich}
 }
+@MISC{Matuschak_2019,
+    title={How does the quantum search algorithm work?},
+    author={Matuschak, Andy and Nielsen, Michael A.},
+    year={2019},
+    URL={https://quantum.country/search},
+    place={San Fransisco}
+}
 @incollection{Meyer_2009,
   title       = "Quantum computing with semiconductor quantum dots",
   author      = "Meyer, Carola",
