supercond/chemistry: few more references.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,6 +23,19 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Barkoutsos_2018,
+   title={Quantum algorithms for electronic structure calculations: Particle-hole Hamiltonian and optimized wave-function expansions},
+   author={Barkoutsos, Panagiotis Kl. and Gonthier, Jerome F. and Sokolov, Igor and Moll, Nikolaj and Salis, Gian and Fuhrer, Andreas and Ganzhorn, Marc and Egger, Daniel J. and Troyer, Matthias and Mezzacapo, Antonio and et al.},
+   year={2018},
+   month={Aug},
+   ISSN={2469-9934},
+   DOI={10.1103/physreva.98.022322},
+   eprint={https://arxiv.org/abs/1805.04340},
+   volume={98},
+   number={2},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)}
+}
 @article{Beer_2020,
   title = {Training deep quantum neural networks},
   author = {Kerstin Beer and Dmytro Bondarenko and Terry Farrelly and Tobias J. Osborne and Robert Salzmann and Daniel Scheiermann and Ramona Wolf},
