--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -1,3 +1,12 @@
+@article{Asfaw_2019,
+ title   = {Get to the heart of real quantum hardware},
+ author  = {Asfaw, Abe and Alexander, Thomas and Nation, Paul and Gambetta, Jay},
+ year = {2019},
+ month = {Dec},
+ urldate = {2021-06-27},
+ url     = {https://www.ibm.com/blogs/research/2019/12/qiskit-openpulse/},
+ journal = {IBM Research Blog}
+}
 @article{Aspect_2015,
   title = {Closing the Door on {E}instein and {B}ohr’s Quantum Debate},
   author = {Aspect, Alain},
