intro/about: more about adiabatic and topological computing.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,59 +23,6 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
-@article{Barkoutsos_2018,
-   title={Quantum algorithms for electronic structure calculations: Particle-hole Hamiltonian and optimized wave-function expansions},
-   author={Barkoutsos, Panagiotis Kl. and Gonthier, Jerome F. and Sokolov, Igor and Moll, Nikolaj and Salis, Gian and Fuhrer, Andreas and Ganzhorn, Marc and Egger, Daniel J. and Troyer, Matthias and Mezzacapo, Antonio and et al.},
-   year={2018},
-   month={Aug},
-   ISSN={2469-9934},
-   DOI={10.1103/physreva.98.022322},
-   eprint={https://arxiv.org/abs/1805.04340},
-   volume={98},
-   number={2},
-   journal={Physical Review A},
-   publisher={American Physical Society (APS)}
-}
-@article{Beer_2020,
-  title = {Training deep quantum neural networks},
-  author = {Kerstin Beer and Dmytro Bondarenko and Terry Farrelly and Tobias J. Osborne and Robert Salzmann and Daniel Scheiermann and Ramona Wolf},
-  year = {2020},
-  month = feb,
-  doi = {10.1038/s41467-020-14454-2},
-  url = {https://www.nature.com/articles/s41467-020-14454-2.pdf},
-  volume = {11},
-  number = {1},
-  journal = {Nature Communications},
-  publisher = {Springer Science and Business Media {LLC}}
-}
-@article{Bennett_1997,
-   title={Strengths and Weaknesses of Quantum Computing},
-   author={Bennett, Charles H. and Bernstein, Ethan and Brassard, Gilles and Vazirani, Umesh},
-   year={1997},
-   month={Oct},
-   ISSN={1095-7111},
-   DOI={10.1137/s0097539796300933},
-   eprint={quant-ph/9701001},
-   volume={26},
-   number={5},
-   pages={1510–1523},
-   journal={SIAM Journal on Computing},
-   publisher={Society for Industrial & Applied Mathematics (SIAM)}
-}
-@article{Biamonte_2017,
-   title={Quantum machine learning},
-   author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
-   year={2017},
-   month={Sep},
-   ISSN={1476-4687},
-   DOI={10.1038/nature23474},
-   eprint={1611.09347},
-   volume={549},
-   number={7671},
-   pages={195–202},
-   journal={Nature},
-   publisher={Springer Science and Business Media LLC}
-}
 @article{Arute_2020,
    title={Hartree-{F}ock on a superconducting qubit quantum computer},
    author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
@@ -142,6 +89,59 @@
   numpages = {0},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
+}
+@article{Barkoutsos_2018,
+   title={Quantum algorithms for electronic structure calculations: Particle-hole Hamiltonian and optimized wave-function expansions},
+   author={Barkoutsos, Panagiotis Kl. and Gonthier, Jerome F. and Sokolov, Igor and Moll, Nikolaj and Salis, Gian and Fuhrer, Andreas and Ganzhorn, Marc and Egger, Daniel J. and Troyer, Matthias and Mezzacapo, Antonio and et al.},
+   year={2018},
+   month={Aug},
+   ISSN={2469-9934},
+   DOI={10.1103/physreva.98.022322},
+   eprint={https://arxiv.org/abs/1805.04340},
+   volume={98},
+   number={2},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)}
+}
+@article{Beer_2020,
+  title = {Training deep quantum neural networks},
+  author = {Kerstin Beer and Dmytro Bondarenko and Terry Farrelly and Tobias J. Osborne and Robert Salzmann and Daniel Scheiermann and Ramona Wolf},
+  year = {2020},
+  month = feb,
+  doi = {10.1038/s41467-020-14454-2},
+  url = {https://www.nature.com/articles/s41467-020-14454-2.pdf},
+  volume = {11},
+  number = {1},
+  journal = {Nature Communications},
+  publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Bennett_1997,
+   title={Strengths and Weaknesses of Quantum Computing},
+   author={Bennett, Charles H. and Bernstein, Ethan and Brassard, Gilles and Vazirani, Umesh},
+   year={1997},
+   month={Oct},
+   ISSN={1095-7111},
+   DOI={10.1137/s0097539796300933},
+   eprint={quant-ph/9701001},
+   volume={26},
+   number={5},
+   pages={1510–1523},
+   journal={SIAM Journal on Computing},
+   publisher={Society for Industrial & Applied Mathematics (SIAM)}
+}
+@article{Biamonte_2017,
+   title={Quantum machine learning},
+   author={Biamonte, Jacob and Wittek, Peter and Pancotti, Nicola and Rebentrost, Patrick and Wiebe, Nathan and Lloyd, Seth},
+   year={2017},
+   month={Sep},
+   ISSN={1476-4687},
+   DOI={10.1038/nature23474},
+   eprint={1611.09347},
+   volume={549},
+   number={7671},
+   pages={195–202},
+   journal={Nature},
+   publisher={Springer Science and Business Media LLC}
 }
 @article{BIGBell_2018,
    title={Challenging local realism with human choices},
@@ -217,6 +217,13 @@
    pages={431–435},
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
+}
+@misc{Fahri_2000,
+  title = {Quantum Computation by Adiabatic Evolution},
+  author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam and Sipser, Michael},
+  year = {2000},
+  month = {Feb},
+  eprint = {quant-ph/0001106}
 }
 @article{Feynman_1982,
   title = {Simulating physics with computers},
@@ -423,6 +430,19 @@
    journal={Scientific Reports},
    publisher={Springer Science and Business Media LLC}
 }
+@article{Leijnse_2012,
+   title={Introduction to topological superconductivity and Majorana fermions},
+   author={Leijnse, Martin and Flensberg, Karsten},
+   year={2012},
+   month={Nov},
+   ISSN={1361-6641},
+   DOI={10.1088/0268-1242/27/12/124003},
+   eprint={1206.1736},
+   volume={27},
+   number={12},
+   journal={Semiconductor Science and Technology},
+   publisher={IOP Publishing}
+}
 @article{Loss_1998,
   title = {Quantum computation with quantum dots},
   author = {Daniel Loss and David P. DiVincenzo},
@@ -448,6 +468,16 @@
    number={1},
    journal={Physical Review A},
    publisher={American Physical Society (APS)}
+}
+@article{Lvovsky_2005,
+  title={Superconducting systems for MRI-present solutions and new trends}, 
+  author={Lvovsky, Y. and Jarvis, P.},
+  year={2005},
+  doi={10.1109/TASC.2005.849580},
+  volume={15},
+  number={2},
+  pages={1317-1325},
+  journal={IEEE Transactions on Applied Superconductivity}
 }
 @article{Ma_2020,
   title = {Quantum simulations of materials on near-term quantum computers},
@@ -625,16 +655,6 @@
    pages={4394},
    journal={Applied Physics Letters},
    publisher={AIP Publishing}
-}
-@ARTICLE{Lvovsky_2005,
-  title={Superconducting systems for MRI-present solutions and new trends}, 
-  author={Lvovsky, Y. and Jarvis, P.},
-  year={2005},
-  doi={10.1109/TASC.2005.849580},
-  volume={15},
-  number={2},
-  pages={1317-1325},
-  journal={IEEE Transactions on Applied Superconductivity}
 }
 @article{Weihs_1998,
   title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
