computing.idea: Majorana.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -694,6 +694,19 @@
   journal = {Combustion Theory and Modelling},
   publisher = {Taylor & Francis}
 }
+@article{Wilczek_2009,
+  title = {Majorana returns},
+  author = {Frank Wilczek},
+  year = {2009},
+  month = sep,
+  doi = {10.1038/nphys1380},
+  url = {https://www.nikhef.nl/~h02/wilczek_majorana.pdf},
+  volume = {5},
+  number = {9},
+  pages = {614--618},
+  journal = {Nature Physics},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Zurek2003,
   title = {Decoherence, einselection, and the quantum origins of the classical},
   author = {Zurek, Wojciech Hubert},
