computing.idea: bit more about Adiabatic Computation.

--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -1,3 +1,16 @@
+@article{Albash_2018,
+   title={Adiabatic quantum computation},
+   author={Albash, Tameem and Lidar, Daniel A.},
+   year={2018},
+   month={Jan},
+   ISSN={1539-0756},
+   DOI={10.1103/revmodphys.90.015002},
+   eprint={1611.04471},
+   volume={90},
+   number={1},
+   publisher={American Physical Society (APS)},
+   journal={Reviews of Modern Physics}
+}
 @article{Altman_2021,
   title = {Quantum Simulators: Architectures and Opportunities},
   author = {Ehud Altman and Kenneth R. Brown and Giuseppe Carleo and others},
