mlearn: quantum classifiers.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -595,6 +595,19 @@
   editor="Danaev, Nargozy and Shokin, Yurii and Darkhan, Akhmed-Zaki",
   publisher="Springer International Publishing"
 }
+@article{Schuld_2020,
+   title={Circuit-centric quantum classifiers},
+   author={Schuld, Maria and Bocharov, Alex and Svore, Krysta M. and Wiebe, Nathan},
+   year={2020},
+   month={Mar},
+   ISSN={2469-9934},
+   DOI={10.1103/physreva.101.032308},
+   eprint={1804.00633},
+   volume={101},
+   number={3},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)}
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
