computing/simulation: many tiny updates (incl. Preskill).

--- a/source/biblio/lectures.bib
+++ b/source/biblio/lectures.bib
@@ -14,3 +14,11 @@
     HOWPUBLISHED = {Lectures in Quantum Science and Technology at Technical University of Munich},
     URL={https://www.ph.tum.de/academics/org/cc/mh/PH1010/}
 }
+@MISC{Preskill229,
+	AUTHOR = {Preskill, John},
+	YEAR = {2021},
+	TITLE = {Quantum {C}omputation},
+    ORGANIZATION = {California Institute of Technology},
+    HOWPUBLISHED = {Online lectures notes},
+    URL={http://theory.caltech.edu/~preskill/ph229/}
+}
