--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -25,6 +25,19 @@
   number = {1},
   journal = {{PRX} Quantum}
 }
+@article{Blatt_2012,
+  title = {Quantum simulations with trapped ions},
+  author = {R. Blatt and C. F. Roos},
+  year = {2012},
+  month = apr,
+  doi = {10.1038/nphys2252},
+  url = {https://www.researchgate.net/publication/258686738_Quantum_Simulations_with_Trapped_Ions},
+  volume = {8},
+  number = {4},
+  pages = {277--284},
+  journal = {Nature Physics},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Bloch_2008,
    title={Many-body physics with ultracold gases},
    author={Bloch, I. and Dalibard, J. and Zwerger, W.},
