complements.topological: Topological Quantum Computers.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -53,6 +53,17 @@
     howpublished={"Hot Chips 32" Conference Archive},
     journal={Hot Chips 32 Conference}
 }
+@article{Collins_2006,
+    title = {Computing with Quantum Knots},
+    author = {Collins, Graham},
+    year = {2006},
+    month = {05},
+    doi = {10.1038/scientificamerican0406-56},
+    url = {https://www.cs.virginia.edu/~robins/Computing_with_Quantum_Knots.pdf},
+    volume = {294},
+    pages = {56-63},
+    journal = {Scientific American}
+}
 @article{Fawaz_2021,
     title = {Knocking on {T}uring’s door: {Q}uantum {C}omputing and {M}achine {L}earning},
     author = {Fawaz, Ather},
@@ -63,13 +74,13 @@
     journal = {The Gradient}
 }
 @article{Horgan_2021,
- title   = {Will Quantum Computing Ever Live Up to Its Hype?},
- author  = {Horgan, John},
- year = {2021},
- date    = {2021-04-20},
- urldate = {2021-06-05},
- url     = {https://www.scientificamerican.com/article/will-quantum-computing-ever-live-up-to-its-hype},
- journal = {Scientific American}
+    title   = {Will Quantum Computing Ever Live Up to Its Hype?},
+    author  = {Horgan, John},
+    year = {2021},
+    date    = {2021-04-20},
+    urldate = {2021-06-05},
+    url     = {https://www.scientificamerican.com/article/will-quantum-computing-ever-live-up-to-its-hype},
+    journal = {Scientific American}
 }
 @MISC{IQCQH_2020,
     title={Introduction to {Q}uantum {C}omputing and {Q}uantum {H}ardware},
