--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -518,6 +518,20 @@
   journal = {npj Quantum Information},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Nayak_2008,
+   title={Non-Abelian anyons and topological quantum computation},
+   author={Nayak, Chetan and Simon, Steven H. and Stern, Ady and Freedman, Michael and Das Sarma, Sankar},
+   year={2008},
+   month={Sep},
+   ISSN={1539-0756},
+   DOI={10.1103/revmodphys.80.1083},
+   eprint={0707.1889},
+   volume={80},
+   number={3},
+   pages={1083–1159},
+   journal={Reviews of Modern Physics},
+   publisher={American Physical Society (APS)}
+}
 @article{OBrien_2019,
    title={Calculating energy derivatives for quantum chemistry on a quantum computer},
    author={O’Brien, Thomas E. and Senjean, Bruno and Sagastizabal, Ramiro and Bonet-Monroig, Xavier and Dutkiewicz, Alicja and Buda, Francesco and DiCarlo, Leonardo and Visscher, Lucas},
