condmatter: about BEC.

--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -107,6 +107,19 @@
   journal = {Annual Review of Physical Chemistry},
   publisher = {Annual Reviews}
 }
+@article{Ketterle_1999,
+  title = {Making,  probing and understanding Bose-Einstein condensates},
+  author = {Ketterle W. and Durfee D.S. and Stamper-Kurn D.M.},
+  year = {1999},
+  ISSN = {0074-784X},
+  DOI = {10.3254/978-1-61499-225-7-67},
+  eprint = {cond-mat/9904034},
+  volume = {140},
+  number = {Bose-Einstein Condensation in Atomic Gases},
+  pages = {67–176},
+  journal = {Proceedings of the International School of Physics Enrico Fermi.},
+  publisher = {IOS Press}
+}
 @article{Kjaergaard_2020,
    title={Superconducting Qubits: Current State of Play},
    author={Kjaergaard, M. and Schwartz, M. E. and Braumüller, J. and Krantz, P. and Wang, J. I.-J. and Gustavsson, S. and Oliver, W. D.},
