computing: more about quantum supremacy.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -23,6 +23,19 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Arute_2019,
+  title = {Quantum supremacy using a programmable superconducting processor},
+  author = {Frank Arute and Kunal Arya and Ryan Babbush and Dave Bacon and Joseph C. Bardin and Rami Barends and Rupak Biswas and Sergio Boixo and Fernando G. S. L. Brandao and David A. Buell and Brian Burkett and Yu Chen and Zijun Chen and Ben Chiaro and Roberto Collins and William Courtney and Andrew Dunsworth and Edward Farhi and Brooks Foxen and Austin Fowler and Craig Gidney and Marissa Giustina and Rob Graff and Keith Guerin and Steve Habegger and Matthew P. Harrigan and Michael J. Hartmann and Alan Ho and Markus Hoffmann and Trent Huang and Travis S. Humble and Sergei V. Isakov and Evan Jeffrey and Zhang Jiang and Dvir Kafri and Kostyantyn Kechedzhi and Julian Kelly and Paul V. Klimov and Sergey Knysh and Alexander Korotkov and Fedor Kostritsa and David Landhuis and Mike Lindmark and Erik Lucero and Dmitry Lyakh and Salvatore Mandr{\`{a}} and Jarrod R. McClean and Matthew McEwen and Anthony Megrant and Xiao Mi and Kristel Michielsen and Masoud Mohseni and Josh Mutus and Ofer Naaman and Matthew Neeley and Charles Neill and Murphy Yuezhen Niu and Eric Ostby and Andre Petukhov and John C. Platt and Chris Quintana and Eleanor G. Rieffel and Pedram Roushan and Nicholas C. Rubin and Daniel Sank and Kevin J. Satzinger and Vadim Smelyanskiy and Kevin J. Sung and Matthew D. Trevithick and Amit Vainsencher and Benjamin Villalonga and Theodore White and Z. Jamie Yao and Ping Yeh and Adam Zalcman and Hartmut Neven and John M. Martinis},
+  year = {2019},
+  month = oct,
+  doi = {10.1038/s41586-019-1666-5},
+  url = {https://www.nature.com/articles/s41586-019-1666-5.pdf},
+  volume = {574},
+  number = {7779},
+  pages = {505--510},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}}
+}
 @article{Arute_2020,
    title={Hartree-{F}ock on a superconducting qubit quantum computer},
    author={Arute, Frank and Arya, Kunal and Babbush, Ryan and Bacon, Dave and Bardin, Joseph C. and Barends, Rami and Boixo, Sergio and Broughton, Michael and Buckley, Bob B. and et al.},
@@ -189,6 +202,19 @@
   pages = {129--140},
   journal = {Nature Reviews Physics},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Dalzell_2020,
+   title={How many qubits are needed for quantum computational supremacy?},
+   author={Dalzell, Alexander M. and Harrow, Aram W. and Koh, Dax Enshan and La Placa, Rolando L.},
+   year={2020},
+   month={May},
+   ISSN={2521-327X},
+   DOI={10.22331/q-2020-05-11-264},
+   eprint={1805.05224},
+   volume={4},
+   pages={264},
+   journal={Quantum},
+   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
 }
 @article{EPR_1935,
   title = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
