complements.entanglement: photon cascade, Hong-Ou-Mandel effect.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -76,7 +76,7 @@
   publisher = {American Physical Society}
 }
 @article{Aspect_1982a,
-  title = {Experimental Realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A New Violation of Bell's Inequalities},
+  title = {Experimental Realization of {E}instein-{P}odolsky-{R}osen-{B}ohm {G}edankenexperiment: A New Violation of {B}ell's Inequalities},
   author = {Aspect, Alain and Grangier, Philippe and Roger, G\'erard},
   year = {1982},
   month = {Jul},
@@ -374,6 +374,18 @@
   pages = {682--686},
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Hong_1987,
+  title = {Measurement of subpicosecond time intervals between two photons by interference},
+  author = {C. K. Hong and Z. Y. Ou and L. Mandel},
+  year = {1987},
+  month = nov,
+  doi = {10.1103/physrevlett.59.2044},
+  volume = {59},
+  number = {18},
+  pages = {2044--2046},
+  journal = {Physical Review Letters},
+  publisher = {American Physical Society ({APS})}
 }
 @article{Kandala_2017,
    title={Hardware-efficient variational quantum eigensolver for small molecules and quantum magnets},
