--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -203,6 +203,18 @@
   journal = {Nature Reviews Physics},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Cirac_1995,
+  title = {Quantum Computations with Cold Trapped Ions},
+  author = {J. I. Cirac and P. Zoller},
+  year = {1995},
+  month = may,
+  doi = {10.1103/physrevlett.74.4091},
+  volume = {74},
+  number = {20},
+  pages = {4091--4094},
+  journal = {Physical Review Letters},
+  publisher = {American Physical Society ({APS})}
+}
 @article{Dalzell_2020,
    title={How many qubits are needed for quantum computational supremacy?},
    author={Dalzell, Alexander M. and Harrow, Aram W. and Koh, Dax Enshan and La Placa, Rolando L.},
