--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -190,6 +190,19 @@
       year={2011},
       eprint={1106.4267}
 }
+@article{Bravyi_2005,
+   title={Universal quantum computation with ideal Clifford gates and noisy ancillas},
+   author={Bravyi, Sergey and Kitaev, Alexei},
+   year={2005},
+   month={Feb},
+   ISSN={1094-1622},
+   DOI={10.1103/physreva.71.022316},
+   eprint={quant-ph/0403025},
+   volume={71},
+   number={2},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)}
+}
 @article{Burkard_2020,
   title = {Superconductor-semiconductor hybrid-circuit quantum electrodynamics},
   author = {Guido Burkard and Michael J. Gullans and Xiao Mi and Jason R. Petta},
