--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -117,6 +117,15 @@
   publisher   = "Forschungszentrum Jülich Zentralbibliothek",
   address = {Jülich}
 }
+@article{Mitchell_2021_Aug,
+ title   = {Explore The Clifford Group, A Crucial Tool For Benchmarking, Error Correction, And More},
+ author  = {Mitchell, Abby},
+ year = {2021},
+ month = {Aug},
+ urldate = {2021-10-22},
+ url     = {https://medium.com/qiskit/explore-the-clifford-group-a-crucial-tool-for-benchmarking-error-correction-and-more-b9fdca16bb46},
+ journal = {Medium Qiskit Blog}
+}
 @article{Russell_2020,
  title   = {Intel Connects the (Quantum) Dots in Accelerating Quantum Computing Effort},
  author  = {Russell, John},
