chemistry/simulate: Grand Update.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -7,6 +7,13 @@
  url     = {https://www.ibm.com/blogs/research/2019/12/qiskit-openpulse/},
  journal = {IBM Research Blog}
 }
+@MISC{AQCL_2021,
+    title={Azure {Q}uantum {D}ocumentation: {I}ntroduction to the {Q}uantum {C}hemistry {L}ibrary},
+    author={Microsoft},
+    year={2021},
+    url={https://docs.microsoft.com/en-us/azure/quantum/user-guide/libraries/chemistry/},
+    urldate={2021-10-23},
+}
 @article{Aspect_2015,
   title = {Closing the Door on {E}instein and {B}ohr’s Quantum Debate},
   author = {Aspect, Alain},
@@ -96,6 +103,13 @@
     URL={https://wiki.tum.de/download/attachments/251625503/IndustryDay_Jirauschek.pdf},
     journal={Industry Day},
     place={Munich}
+}
+@MISC{Jordan_2021,
+    title={Quantum Algorithm Zoo},
+    author={Jordan, Stephen},
+    year={2021},
+    URL={https://quantumalgorithmzoo.org/},
+    urldate={2021-10-23}
 }
 @MISC{Matuschak_2019,
     title={How does the quantum search algorithm work?},
