--- a/source/biblio/reviews.bib
+++ b/source/biblio/reviews.bib
@@ -78,7 +78,20 @@
    pages={132–142},
    journal={Nature Physics},
    publisher={Springer Science and Business Media LLC}
-},
+}
+@article{Cerezo_2021,
+   title={Variational quantum algorithms},
+   author={Cerezo, M. and Arrasmith, Andrew and Babbush, Ryan and Benjamin, Simon C. and Endo, Suguru and Fujii, Keisuke and McClean, Jarrod R. and Mitarai, Kosuke and Yuan, Xiao and Cincio, Lukasz and et al.},
+   year={2021},
+   month={Aug},
+   ISSN={2522-5820},
+   DOI={10.1038/s42254-021-00348-9},
+   eprint={2012.09265},
+   volume={3},
+   number={9},
+   journal={Nature Reviews Physics},
+   publisher={Springer Science and Business Media LLC},
+}
 @article{Georgescu_2014,
   title = {Quantum simulation},
   author = {Georgescu, I. M. and Ashhab, S. and Nori, Franco},
@@ -161,4 +174,17 @@
    pages={243–379},
    journal={Advances in Physics},
    publisher={Informa UK Limited}
+}
+@article{McArdle_2020,
+   title={Quantum computational chemistry},
+   author={McArdle, Sam and Endo, Suguru and Aspuru-Guzik, Alán and Benjamin, Simon C. and Yuan, Xiao},
+   year={2020},
+   month={Mar},
+   ISSN={1539-0756},
+   DOI={10.1103/revmodphys.92.015003},
+   eprint={1808.10402},
+   volume={92},
+   number={1},
+   journal={Reviews of Modern Physics},
+   publisher={American Physical Society (APS)},
 }
