--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,3 +1,18 @@
+@article{Abrams_1999,
+   title={Quantum Algorithm Providing Exponential Speed Increase for Finding Eigenvalues and Eigenvectors},
+   author={Abrams, Daniel S. and Lloyd, Seth},
+   year={1999},
+   month={Dec},
+   ISSN={1079-7114},
+   DOI={10.1103/physrevlett.83.5162},
+   url={http://dx.doi.org/10.1103/PhysRevLett.83.5162},
+   eprint={quant-ph/9807070},
+   volume={83},
+   number={24},
+   pages={5162–5165},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+}
 @article{Ansaloni_2020,
   title = {Single-electron operations in a foundry-fabricated array of quantum dots},
   author = {Fabio Ansaloni and Anasua Chatterjee and Heorhii Bohuslavskyi and Benoit Bertrand and Louis Hutin and Maud Vinet and Ferdinand Kuemmeth},
@@ -102,6 +117,20 @@
   numpages = {0},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
+}
+@article{Babbush_2018,
+   title={Encoding Electronic Spectra in Quantum Circuits with Linear T Complexity},
+   author={Babbush, Ryan and Gidney, Craig and Berry, Dominic W. and Wiebe, Nathan and McClean, Jarrod and Paler, Alexandru and Fowler, Austin and Neven, Hartmut},
+   year={2018},
+   month={Oct},
+   ISSN={2160-3308},
+   DOI={10.1103/physrevx.8.041015},
+   url={https://journals.aps.org/prx/pdf/10.1103/PhysRevX.8.041015},
+   eprint={1805.03662},
+   volume={8},
+   number={4},
+   journal={Physical Review X},
+   publisher={American Physical Society (APS)},
 }
 @article{Barkoutsos_2018,
    title={Quantum algorithms for electronic structure calculations: Particle-hole Hamiltonian and optimized wave-function expansions},
@@ -387,6 +416,35 @@
    journal={Physical Review Letters},
    publisher={American Physical Society (APS)}
 }
+@article{Hastings_2014,
+    author = {Hastings, Matthew B. and Wecker, Dave and Bauer, Bela and Troyer, Matthias},
+    title = {Improving Quantum Algorithms for Quantum Chemistry},
+    year = {2015},
+    month = jan,
+    issn = {1533-7146},
+    DOI={10.5555/2685188.2685189},
+    eprint={1403.1539},
+    url={https://dl.acm.org/doi/10.5555/2685188.2685189},
+    volume = {15},
+    number = {1–2},
+    pages = {1–21},
+    journal = {Quantum Info. Comput.},
+    publisher = {Rinton Press, Incorporated},
+}
+@article{Hastings_2021,
+   title={Dynamically Generated Logical Qubits},
+   author={Hastings, Matthew B. and Haah, Jeongwan},
+   year={2021},
+   month={Oct},
+   ISSN={2521-327X},
+   DOI={10.22331/q-2021-10-19-564},
+   url={https://quantum-journal.org/papers/q-2021-10-19-564/pdf/},
+   eprint={2107.02194},
+   volume={5},
+   pages={564},
+   journal={Quantum},
+   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
+}
 @article{Hensen_2015,
   title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
   author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
@@ -518,6 +576,20 @@
   pages = {120--126},
   journal = {Physical Review A},
   publisher = {American Physical Society ({APS})}
+}
+@article{Low_2019,
+   title={Hamiltonian Simulation by Qubitization},
+   author={Low, Guang Hao and Chuang, Isaac L.},
+   year={2019},
+   month={Jul},
+   ISSN={2521-327X},
+   DOI={10.22331/q-2019-07-12-163},
+   url={https://quantum-journal.org/papers/q-2019-07-12-163/pdf/},
+   eprint={1610.06546},
+   volume={3},
+   pages={163},
+   journal={Quantum},
+   publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
 }
 @article{Lubasch_2020,
    title={Variational quantum algorithms for nonlinear problems},
@@ -783,6 +855,34 @@
   pages = {1090-1104},
   journal = {Combustion Theory and Modelling},
   publisher = {Taylor & Francis}
+}
+@article{Wecker_2014,
+   title={Gate-count estimates for performing quantum chemistry on small quantum computers},
+   author={Wecker, Dave and Bauer, Bela and Clark, Bryan K. and Hastings, Matthew B. and Troyer, Matthias},
+   year={2014},
+   month={Aug},
+   ISSN={1094-1622},
+   url={http://dx.doi.org/10.1103/PhysRevA.90.022305},
+   DOI={10.1103/physreva.90.022305},
+   eprint={1312.1695},
+   volume={90},
+   number={2},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)},
+}
+@article{Whitfield_2011,
+   title={Simulation of electronic structure Hamiltonians using quantum computers},
+   author={Whitfield, James D. and Biamonte, Jacob and Aspuru-Guzik, Alán},
+   year={2011},
+   month={Mar},
+   ISSN={1362-3028},
+   DOI={10.1080/00268976.2011.552441},
+   eprint={1001.3855},
+   volume={109},
+   number={5},
+   pages={735–750},
+   journal={Molecular Physics},
+   publisher={Informa UK Limited},
 }
 @article{Wilczek_2009,
   title = {Majorana returns},
