group_theory and a bit more.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -158,3 +158,10 @@
     howpublished={github and youtube},
     journal={IEEE Quantum Week (QCE20)}
 }
+@misc{GroupProps,
+  author = "The Group Properties Wiki",
+  title = "Linear representation theory of symmetric group S3",
+  year = "2014",
+  url = "https://groupprops.subwiki.org/wiki/Linear_representation_theory_of_symmetric_group:S3",
+  urldate = "2021-10-23"
+}
