--- a/source/biblio/textbooks.bib
+++ b/source/biblio/textbooks.bib
@@ -1,7 +1,16 @@
+@BOOK{Hamermesh2012,
+	TITLE = {Group Theory and Its Application to Physical Problems - },
+	AUTHOR = {Hamermesh, Morton},
+	YEAR = {2012},
+	EDITION = {},
+	ISBN = {978-0-486-14039-1},
+	PUBLISHER = {Courier Corporation},
+	ADDRESS = {New York},
+}
 @BOOK{Szabo1996,
+	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory},
 	AUTHOR = {Szabo, Attila AND Ostlund, Neil S.},
 	YEAR = {1996},
-	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory},
 	EDITION = {},
 	ISBN = {978-0-486-69186-2},
 	PUBLISHER = {Courier Corporation},
