group_theory: second book to the bib.

--- a/source/biblio/textbooks.bib
+++ b/source/biblio/textbooks.bib
@@ -7,6 +7,15 @@
 	PUBLISHER = {Courier Corporation},
 	ADDRESS = {New York},
 }
+@BOOK{Helgaker2013,
+	TITLE = {Molecular Electronic-Structure Theory - },
+	AUTHOR = {Helgaker, Trygve AND Jorgensen, Poul AND Olsen, Jeppe},
+	YEAR = {2013},
+	EDITION = {},
+	ISBN = {978-1-118-53147-1},
+	PUBLISHER = {John Wiley & Sons},
+	ADDRESS = {New York},
+}
 @BOOK{Szabo1996,
 	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory},
 	AUTHOR = {Szabo, Attila AND Ostlund, Neil S.},
