opti/adiabatic: grand update.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -298,7 +298,14 @@
    journal={Nature},
    publisher={Springer Science and Business Media LLC}
 }
-@misc{Fahri_2000,
+@misc{Farhi_2014,
+    title={A Quantum Approximate Optimization Algorithm}, 
+    author={Edward Farhi and Jeffrey Goldstone and Sam Gutmann},
+    year={2014},
+    month = {Nov},
+    eprint={1411.4028},
+}
+@misc{Farhi_2000,
   title = {Quantum Computation by Adiabatic Evolution},
   author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam and Sipser, Michael},
   year = {2000},
@@ -396,6 +403,20 @@
    pages={433},
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
+}
+@misc{Glover_2019,
+      title={Quantum {B}ridge {A}nalytics {I}: A Tutorial on Formulating and Using {QUBO} Models}, 
+      author={Fred Glover and Gary Kochenberger and Yu Du},
+      year={2019},
+      month = nov,
+      doi={10.1007/s10288-019-00424-y},
+      url={https://www.springerprofessional.de/quantum-bridge-analytics-i-a-tutorial-on-formulating-and-using-q/17436666},
+      eprint={1811.11538},
+      volume = {17},
+      number = {4},
+      pages = {335--371},
+      journal={A Quarterly Journal of Operations Research},
+      publisher = {Springer Science and Business Media {LLC}},
 }
 @misc{Griffin_2020,
   title={Investigation of quantum algorithms for direct numerical simulation of the Navier-Stokes equations},
@@ -603,6 +624,18 @@
    number={1},
    journal={Physical Review A},
    publisher={American Physical Society (APS)}
+}
+@article{Lucas_2014,
+   title={Ising formulations of many NP problems},
+   author={Lucas, Andrew},
+   year={2014},
+   ISSN={2296-424X},
+   DOI={10.3389/fphy.2014.00005},
+   url={https://www.frontiersin.org/articles/10.3389/fphy.2014.00005/full},
+   eprint={1302.5843},
+   volume={2},
+   journal={Frontiers in Physics},
+   publisher={Frontiers Media SA},
 }
 @article{Lvovsky_2005,
   title={Superconducting systems for MRI-present solutions and new trends}, 
@@ -896,6 +929,20 @@
   pages = {614--618},
   journal = {Nature Physics},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Zhou_2020,
+  author = {Zhou, Leo and Wang, Sheng-Tao and Choi, Soonwon and Pichler, Hannes and Lukin, Mikhail D.},
+  title = {Quantum Approximate Optimization Algorithm: Performance, Mechanism, and Implementation on Near-Term Devices},
+  year = {2020},
+  month = {Jun},
+  doi = {10.1103/PhysRevX.10.021067},
+  url = {https://journals.aps.org/prx/pdf/10.1103/PhysRevX.10.021067},
+  eprint = {1812.01041},
+  volume = {10},
+  issue = {2},
+  pages = {021067},
+  journal = {Phys. Rev. X},
+  publisher = {American Physical Society},
 }
 @article{Zurek2003,
   title = {Decoherence, einselection, and the quantum origins of the classical},
