--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -71,6 +71,20 @@
     pages = {56-63},
     journal = {Scientific American}
 }
+@MISC{DWave_2021,
+    title={D-{Wave} {S}ystem {D}ocumentation},
+    author={D-Wave},
+    year={2021},
+    url={https://docs.dwavesys.com/docs/latest/index.html},
+    urldate={2021-11-01},
+}
+@MISC{DWaveOcean_2021,
+    title={D-{Wave} {O}cean {S}oftware {D}ocumentation},
+    author={D-Wave},
+    year={2021},
+    url={https://docs.ocean.dwavesys.com/en/stable/index.html},
+    urldate={2021-11-01},
+}
 @article{Fawaz_2021,
     title = {Knocking on {T}uring’s door: {Q}uantum {C}omputing and {M}achine {L}earning},
     author = {Fawaz, Ather},
@@ -139,6 +153,15 @@
  urldate = {2021-10-22},
  url     = {https://medium.com/qiskit/explore-the-clifford-group-a-crucial-tool-for-benchmarking-error-correction-and-more-b9fdca16bb46},
  journal = {Medium Qiskit Blog}
+}
+@misc{Ratke_2021,
+    title={XA0 Blog},
+    author={Ratke, Daniel},
+    year={2020},
+    month={Oct},
+    urldate={2021-11-01},
+    URL={https://blog.xa0.de/},
+    howpublished={blog},
 }
 @article{Russell_2020,
  title   = {Intel Connects the (Quantum) Dots in Accelerating Quantum Computing Effort},
