opti: added examples TSP & routing (started).

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -437,6 +437,18 @@
    journal={Physical Review Letters},
    publisher={American Physical Society (APS)}
 }
+@article{Harwood_2021,
+  title={Formulating and Solving Routing Problems on Quantum Computers}, 
+  author={Harwood, Stuart and Gambella, Claudio and Trenev, Dimitar and Simonetto, Andrea and Bernal, David and Greenberg, Donny},
+  year={2021},
+  doi={10.1109/TQE.2021.3049230},
+  url={https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9314905},
+  eprint={},
+  volume={2},
+  number={},
+  pages={1-17},
+  journal={IEEE Transactions on Quantum Engineering}, 
+}
 @article{Hastings_2014,
     author = {Hastings, Matthew B. and Wecker, Dave and Bauer, Bela and Troyer, Matthias},
     title = {Improving Quantum Algorithms for Quantum Chemistry},
@@ -478,6 +490,16 @@
   pages = {682--686},
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@incollection{Hirotaka_2019,
+  title = {Quantum Annealing of Vehicle Routing Problem with Time, State and Capacity},
+  author = {Hirotaka Irie and Goragot Wongpaisarnsin and Masayoshi Terabe and Akira Miki and Shinichirou Taguchi},
+  year = {2019},
+  doi = {10.1007/978-3-030-14082-3_13},
+  eprint = {1903.06322},
+  publisher = {Springer International Publishing},
+  pages = {145--156},
+  booktitle = {Quantum Technology and Optimization Problems. QTOP 2019. Lecture Notes in Computer Science, vol 11413.},
 }
 @article{Hong_1987,
   title = {Measurement of subpicosecond time intervals between two photons by interference},
