--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -232,6 +232,21 @@
    journal={Physical Review A},
    publisher={American Physical Society (APS)}
 }
+@article{Bridgeman_2017,
+   title={Hand-waving and interpretive dance: an introductory course on tensor networks},
+   author={Bridgeman, Jacob C and Chubb, Christopher T},
+   year={2017},
+   month={May},
+   ISSN={1751-8121},
+   DOI={10.1088/1751-8121/aa6dc3},
+   url={https://iopscience.iop.org/article/10.1088/1751-8121/aa6dc3/pdf},
+   eprint={1603.03039},
+   journal={Journal of Physics A: Mathematical and Theoretical},
+   volume={50},
+   number={22},
+   pages={223001},
+   publisher={IOP Publishing},
+}
 @article{Burkard_2020,
   title = {Superconductor-semiconductor hybrid-circuit quantum electrodynamics},
   author = {Guido Burkard and Michael J. Gullans and Xiao Mi and Jason R. Petta},
@@ -742,6 +757,17 @@
   eprint={1706.05413},
   publisher={National Science Foundation}
 }
+@article{Orus_2014,
+title = {A practical introduction to tensor networks: Matrix product states and projected entangled pair states},
+author = {Román Orús},
+year = {2014},
+issn = {0003-4916},
+doi = {https://doi.org/10.1016/j.aop.2014.06.013},
+eprint = {1306.2164},
+journal = {Annals of Physics},
+volume = {349},
+pages = {117-158},
+}
 @article{PerdomoOrtiz_2019,
    title={Readiness of Quantum Optimization Machines for Industrial Applications},
    author={Perdomo-Ortiz, Alejandro and Feldman, Alexander and Ozaeta, Asier and Isakov, Sergei V. and Zhu, Zheng and O’Gorman, Bryan and Katzgraber, Helmut G. and Diedrich, Alexander and Neven, Hartmut and de Kleer, Johan and et al.},
@@ -951,6 +977,20 @@
   pages = {614--618},
   journal = {Nature Physics},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Wood_2015,
+  title = {Tensor networks and graphical calculus for open quantum systems},
+  author = {Christopher J. Wood and Jacob D. Biamonte and David G. Cory},
+  year = {2015},
+  month = jul,
+  doi = {10.26421/qic15.9-10-3},
+  url = {https://www.rintonpress.com/xxqic15/qic-15-910/0759-0811.pdf},
+  eprint = {1111.6950},
+  volume = {15},
+  number = {9{\&}10},
+  pages = {759--811},
+  journal = {Quantum Information and Computation},
+  publisher = {Rinton Press},
 }
 @article{Zhou_2020,
   author = {Zhou, Leo and Wang, Sheng-Tao and Choi, Soonwon and Pichler, Hannes and Lukin, Mikhail D.},
